# football-quiz

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  alembic.ini  env.example  main.py  pyproject.toml
.ci/docker/: app.dev.yml  app.yml  storage.dev.yml
.ci/scripts/: clear_secrets.sh
app/healthcheck/: api.py
app/users/: api.py  models.py  schema.py
apps/api/: routers.py
apps/api/actions/: __init__.py  game_settings.py  quiz.py  users.py  utils.py
apps/api/mobile/: depends.py  game_settings.py  quiz.py  users.py
apps/game_settings/: models.py  schema.py
apps/quiz/: models.py  schema.py
apps/users/: models.py  schema.py
config/: routers.py  settings.py
core/actions/: __init__.py  game_settings.py  mixins.py  quiz.py  users.py
core/api/: mapper.py  pagination.py  routers.py  schema.py  search.py
core/api/mobile/: depends.py  game_settings.py  quiz.py  users.py  utils.py
core/api/mobile/game_settings/: handlers.py  schema.py
core/api/mobile/quiz/: handlers.py
core/api/mobile/users/: handlers.py  schema.py
core/apps/: mapper.py
core/apps/game_settings/: models.py  schema.py
core/apps/game_settings/actions/: __init__.py  actions.py
core/apps/game_settings/dto/: __init__.py  converter.py  dto.py
core/apps/quiz/: models.py  schema.py
core/apps/quiz/actions/: __init__.py  actions.py
core/apps/quiz/dto/: __init__.py  converter.py  dto.py
core/apps/quiz/exceptions/: __init__.py  quiz.py
core/apps/quiz/permissions/: quiz.py
core/apps/users/: models.py  schema.py
core/apps/users/actions/: __init__.py  actions.py  composite.py
core/apps/users/dto/: __init__.py  converter.py  dto.py
core/apps/users/exceptions/: profile.py  statistics.py
core/apps/users/permissions/: profile.py
core/config/: containers.py  settings.py
core/config/database/: base.py  db.py
core/config/database/migrations/: env.py
core/database/: base.py  db.py
core/database/crud/: __init__.py  profile.py  quiz_db.py  users_db.py  utils.py
core/database/migrations/: env.py
core/database/migrations/versions/: 075537943389_.py  075d5736b19c_0002_profile_user_id_null.py  149c18f0cfe3_0003_add_device_uuid_profile.py  1ffc223c1a3b_.py  20ca50a2c076_.py  50aa2213b3b4_.py  64182c1808f8_0004_add_question_answer_table.py  699eab6e0fef_0005_add_statistic.py  734928bc6a8a_.py  7806798ebb1a_.py  7e68819eb4ba_.py  91781d31ff57_.py  cfbf138d1743_0001_create_user_profile_models.py  da1231b6c2d7_0005_add_statistic.py  e134752b8b56_.py  e1bcb874766f_.py  e6a82a62ea8b_0004_create_game_settings.py  e94474f4a6bd_.py
core/security/: mobile_auth.py  utils.py
core/services/constructor/exceptions/: __init__.py  base.py
core/services/constructor/permissions/: __init__.py
core/services/constructor/validators/: __init__.py  base.py
core/services/firebase/: conf.py  exceptions.py  firebase.py  query.py
core/services/security/: device_validator.py  exceptions.py  mobile_auth.py
core/services/tasks/: celery_app.py  celery_config.py  tasks.py
healthcheck/: api.py
mobile/quiz/: api.py
mobile/users/: api.py  models.py  schema.py
services/crud_service/: __init__.py  crud_quiz.py  crud_users.py  mixins.py  utils.py
services/firebase/: __init__.py  firebase.py  query.py
services/storage_service/: base.py  dto.py
services/storage_service/game_settings_db/: converter.py  interface.py
services/storage_service/quiz_db/: converter.py  interface.py
services/storage_service/user_db/: converter.py  interface.py
src/: alembic.ini  main.py
src/api/: pagination.py  routers.py  schema.py
src/api/admin/: depends.py
src/api/admin/auth/: handlers.py  schema.py
src/api/admin/feedback/: handlers.py  schema.py
src/api/admin/game_settings/: handlers.py  schema.py
src/api/admin/quiz/: handlers.py  schema.py
src/api/admin/users/: handlers.py  schema.py
src/api/auth/: handlers.py  schema.py
src/api/mobile/: depends.py  utils.py
src/api/mobile/game_settings/: handlers.py
src/api/mobile/quiz/: __init__.py  handlers.py  schema.py
src/api/mobile/users/: handlers.py  schema.py
src/api/web/feedback/: handlers.py  schema.py
src/api/web/users/: handlers.py  schema.py
src/apps/feedback/actions/: feedback.py
src/apps/feedback/models/: entity.py
src/apps/game_settings/: converter.py  models.py
src/apps/game_settings/actions/: __init__.py  actions.py  admin.py
src/apps/game_settings/dto/: converter.py  dto.py
src/apps/game_settings/models/: __init__.py  entity.py  sqla.py
src/apps/quiz/: converter.py  models.py
src/apps/quiz/actions/: __init__.py  actions.py  complaints.py  questions.py
src/apps/quiz/dto/: converter.py  dto.py
src/apps/quiz/exceptions/: __init__.py  (+4 more)
src/apps/users/: converter.py  models.py
src/config/: __init__.py  config_builder.py  containers.py
src/config/base_settings/: common.py  database.py  firebase.py  rabbitmq.py  redis.py
src/config/containers/: __init__.py  containers.py
src/config/database/: base.py
src/core/database/: db.py
src/services/: mapper.py
src/services/firebase/: exceptions.py  firebase.py  query.py
src/services/jwt_token/: exceptions.py  models.py
src/services/mapper/: __init__.py  build_profile_schema.py  build_statistic_schema.py  dataclass_to_schema.py
src/services/redis_pool/: __init__.py  connection.py  storage.py
src/services/security/: device_validator.py  exceptions.py  mobile_auth.py
src/services/tasks/: celery_app.py  celery_config.py  tasks.py
test/: dump.sh  http_request.py  quiz.dump  restore.sh
test/test_api/: fixture.py  test_admin.py  test_mobile.py
(+88 files in other folders)
