[tool.poetry]
name = "football-quiz-fun"
version = "1.0"
description = "API для мобильного приложения Футбольная викторина"
authors = ["posholokia <ilya.posholokk@gmail.com>"]
readme = "README.md"
packages = [{include = "football_quiz"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"
ruff = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".ci",
    ".ruff_cache",
    ".venv",
    "venv",
    "core/database/base.py",
    "core/database/migrations",
    ]

line-length = 79
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
ignore = ["E712"]

[tool.isort]
multi_line_output=3
include_trailing_comma=true
line_length=120
lines_after_imports=2
lines_between_sections=1
lines_between_types=0
force_alphabetical_sort_within_sections=true
ensure_newline_before_comments=true
combine_as_imports=true
combine_star=true
skip_gitignore=true
balanced_wrapping=true
force_grid_wrap=2
src_paths=["core", ]
skip_glob=[
    ".git",
    ".idea",
    ".ci",
    ".ruff_cache",
    "venv",
]
known_django=["django","ninja"]
known_first_party=["core"]
sections=[
    "FUTURE",
    "STDLIB",
    "DJANGO",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]