[tool.poetry]
name = "football-quiz-fun"
version = "1.0"
description = "API для мобильного приложения Футбольная викторина"
authors = ["posholokia <ilya.posholokk@gmail.com>"]
readme = "README.md"
packages = [{include = "football_quiz"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {version = "^0.111.0", extras = ["all"]}
alembic = "^1.13.1"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"
requests = "^2.32.3"
google-api-python-client = "^2.132.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
aiohttp = "^3.9.5"
punq = "^0.7.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ruff = "^0.5.1"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".ci",
    ".ruff_cache",
    ".venv",
    "venv",
    "core/config/database/base.py",
    "core/config/database/migrations",
    "test",
    ]

line-length = 79
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
ignore = ["E712"]

[tool.isort]
order_by_type = true
force_sort_within_sections=false
multi_line_output=3
include_trailing_comma=true
line_length=79
lines_after_imports=2
lines_between_sections=1
lines_between_types=0
length_sort_straight=true
force_alphabetical_sort_within_sections=true
ensure_newline_before_comments=true
combine_as_imports=true
combine_star=true
skip_gitignore=true
balanced_wrapping=true
force_grid_wrap=2
src_paths=["core", ]
skip_glob=[
    ".git",
    ".idea",
    ".ci",
    ".ruff_cache",
    "venv",
    "core/database/migrations"
]
default_section = "THIRDPARTY"
known_fastapi=["fastapi", "starlette", "sqlalchemy"]
known_firstparty=["apps", "config", "core", "services"]

sections=[
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FASTAPI",
    "FIRSTPARTY",
    "LOCALFOLDER",
]